// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player renders correctly with analyser 1`] = `
<Player
  activeIndex={0}
  config={
    Object {
      "useAnalyser": true,
    }
  }
  isPlaying={false}
  nextIndex={1}
  playToggle={false}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={
    Array [
      Object {
        "path": "test1",
        "tag": Object {
          "title": "test1",
        },
      },
      Object {
        "path": "test2",
        "tag": Object {
          "title": "test2",
        },
      },
    ]
  }
>
  <div
    className="player"
  >
    <Analyser
      audio={null}
      isPlaying={false}
    />
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;

exports[`Player renders correctly without analyser 1`] = `
<Player
  activeIndex={0}
  config={
    Object {
      "useAnalyser": false,
    }
  }
  isPlaying={false}
  nextIndex={1}
  playToggle={false}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={
    Array [
      Object {
        "path": "test1",
        "tag": Object {
          "title": "test1",
        },
      },
      Object {
        "path": "test2",
        "tag": Object {
          "title": "test2",
        },
      },
    ]
  }
>
  <div
    className="player"
  >
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;

exports[`Player renders correctly without analyser 2`] = `
<Player
  activeIndex={1}
  config={
    Object {
      "useAnalyser": false,
    }
  }
  isPlaying={false}
  nextIndex={1}
  playToggle={false}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
        Array [
          Object {
            "path": "test2",
            "tag": Object {
              "title": "test2",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={
    Array [
      Object {
        "path": "test1",
        "tag": Object {
          "title": "test1",
        },
      },
      Object {
        "path": "test2",
        "tag": Object {
          "title": "test2",
        },
      },
    ]
  }
>
  <div
    className="player"
  >
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;

exports[`Player renders correctly without analyser 3`] = `
<Player
  activeIndex={1}
  config={
    Object {
      "useAnalyser": false,
    }
  }
  isPlaying={false}
  nextIndex={1}
  playToggle={true}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
        Array [
          Object {
            "path": "test2",
            "tag": Object {
              "title": "test2",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={
    Array [
      Object {
        "path": "test1",
        "tag": Object {
          "title": "test1",
        },
      },
      Object {
        "path": "test2",
        "tag": Object {
          "title": "test2",
        },
      },
    ]
  }
>
  <div
    className="player"
  >
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;

exports[`Player renders correctly without analyser 4`] = `
<Player
  activeIndex={2}
  config={
    Object {
      "useAnalyser": false,
    }
  }
  isPlaying={true}
  nextIndex={1}
  playToggle={false}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
        Array [
          Object {
            "path": "test2",
            "tag": Object {
              "title": "test2",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={Array []}
>
  <div
    className="player"
  >
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;

exports[`Player renders correctly without analyser 5`] = `
<Player
  activeIndex={0}
  config={
    Object {
      "useAnalyser": false,
    }
  }
  isPlaying={false}
  nextIndex={1}
  playToggle={false}
  saveActiveTrack={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
        Array [
          Object {
            "path": "test2",
            "tag": Object {
              "title": "test2",
            },
          },
        ],
        Array [
          Object {
            "path": "test1",
            "tag": Object {
              "title": "test1",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setActiveIndex={[MockFunction]}
  setIsPlaying={[MockFunction]}
  tracks={
    Array [
      Object {
        "path": "test1",
        "tag": Object {
          "title": "test1",
        },
      },
      Object {
        "path": "test2",
        "tag": Object {
          "title": "test2",
        },
      },
    ]
  }
>
  <div
    className="player"
  >
    <audio
      className="audio"
      controls={true}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      preload="none"
      tabIndex="-1"
    />
  </div>
</Player>
`;
